Update visualization notebook

--- a/analysis/plot.ipynb
+++ b/analysis/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "    \"font.family\": \"sans-serif\",\n",
     "    \"font.sans-serif\": [\"Helvetica\"]})\n",
     "sns.set_context(\"paper\")\n",
-    "sns.set(font_scale = 1.2)\n",
+    "sns.set(font_scale = 1.4)\n",
     "sns.set_style(\"ticks\")\n",
     "# sns.set_palette(\"deep\")\n",
     "sns.set_palette(\"twilight_shifted_r\")"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "[325 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e56f75fd5d6846c394ef77b4504da051",
+       "model_id": "a5ec9c1b378d4c40856b2eed49462d26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,8 +197,87 @@
     "    sub_df = data_df[data_df['Type'] == run_type]\n",
     "    ax = sns.barplot(x='Data size (GB)', y='Makespan', hue='Scenario', data=sub_df, hue_order=hue_order)\n",
     "    ax.legend_.set_title(\"\")\n",
-    "    # plt.savefig('walltime.png', bbox_inches='tight', dpi=12000)\n",
-    "    plt.savefig('iosynthetic_'+run_type+'.png', bbox_inches='tight')"
+    "    # plt.savefig('iosynthetic_'+run_type+'.pdf', bbox_inches='tight', dpi=12000)\n",
+    "    # plt.savefig('iosynthetic_'+run_type+'.png', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8359575419604c2bb66d23306cfc48a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_type', options=('nosleep', 'sleep'), value='nosleep'), Output(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact(run_type=data_df['Type'].unique())\n",
+    "def plot_summary(run_type):\n",
+    "    sub_df = data_df[data_df['Type'] == run_type]\n",
+    "    sub_df['Average'] = sub_df.groupby(['Scenario','Data size (GB)'])['Makespan'].transform('mean')\n",
+    "    temp_df = sub_df[['Scenario','Data size (GB)','Average']].drop_duplicates() \n",
+    "    t_df = temp_df.loc[temp_df['Scenario'] == 'Pegasus only']\n",
+    "    s = t_df.set_index('Data size (GB)')['Average']\n",
+    "    temp_df['Percentage of Pegasus only (\\%)'] = temp_df['Average']*100 / temp_df['Data size (GB)'].map(s)\n",
+    "    ax = sns.barplot(x='Data size (GB)', y='Percentage of Pegasus only (\\%)', hue='Scenario', data=temp_df, hue_order=hue_order)\n",
+    "    ax.legend_.set_title(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3191272f09594f67a1592f772d2bac41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_type', options=('nosleep', 'sleep'), value='nosleep'), Output(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact(run_type=data_df['Type'].unique())\n",
+    "def plot_summary(run_type):\n",
+    "    sub_df = data_df[data_df['Type'] == run_type]\n",
+    "    fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(10,3.5), constrained_layout=True)\n",
+    "    sub_df['Average'] = sub_df.groupby(['Scenario','Data size (GB)'])['Makespan'].transform('mean')\n",
+    "    temp_df = sub_df[['Scenario','Data size (GB)','Average']].drop_duplicates() \n",
+    "    t_df = temp_df.loc[temp_df['Scenario'] == 'Pegasus only']\n",
+    "    s = t_df.set_index('Data size (GB)')['Average']\n",
+    "    temp_df['Percentage of Pegasus only (\\%)'] = temp_df['Average']*100 / temp_df['Data size (GB)'].map(s)\n",
+    "    ax0 = sns.barplot(x='Data size (GB)', y='Makespan', hue='Scenario', data=sub_df, hue_order=hue_order, ax=axes[0])\n",
+    "    # ax0.legend_.set_title(\"\")\n",
+    "    ax0.legend().set_visible(False)\n",
+    "    ax0.set_xlabel('File size (GB)')\n",
+    "    ax0.set_ylabel('Makespan (s)')\n",
+    "    ax1 = sns.barplot(x='Data size (GB)', y='Percentage of Pegasus only (\\%)', hue='Scenario', data=temp_df, hue_order=hue_order, ax=axes[1])\n",
+    "    ax1.axhline(100, linestyle='--', linewidth=1.5)\n",
+    "    # ax1.legend_.set_title(\"\")\n",
+    "    ax1.legend().set_visible(False)\n",
+    "    ax1.set_xlabel('File size (GB)')\n",
+    "    ax1.set_ylabel('Normalization to Pegasus only (\\%)')\n",
+    "    handles, labels = axes[1].get_legend_handles_labels()\n",
+    "    fig.legend(handles, labels, bbox_to_anchor=(0.8, 1.2), borderaxespad=0, ncol=3)\n",
+    "    plt.savefig('iosynthetic_'+run_type+'.pdf', bbox_inches='tight', dpi=12000)"
    ]
   }
  ],
