Update visualization notebook

--- a/analysis/plot.ipynb
+++ b/analysis/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,20 @@
     "from IPython.display import display\n",
     "from ipywidgets import interact, interactive, interact_manual\n",
     "import os\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Helvetica\"]})\n",
     "sns.set_context(\"paper\")\n",
     "sns.set(font_scale = 1.4)\n",
     "sns.set_style(\"ticks\")\n",
     "# sns.set_palette(\"deep\")\n",
-    "sns.set_palette(\"twilight_shifted_r\")"
+    "sns.set_palette(\"twilight_shifted_r\")\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"Computer Modern Typewriter\"\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Scenario</th>\n",
-       "      <th>Data size (GB)</th>\n",
+       "      <th>File size (GB)</th>\n",
        "      <th>Type</th>\n",
        "      <th>Makespan</th>\n",
        "    </tr>\n",
@@ -62,35 +62,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Pegasus + Decaf</td>\n",
+       "      <td>\\textsc{PegDecaf}</td>\n",
        "      <td>16</td>\n",
        "      <td>nosleep</td>\n",
        "      <td>104.140000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Pegasus + Decaf</td>\n",
+       "      <td>\\textsc{PegDecaf}</td>\n",
        "      <td>16</td>\n",
        "      <td>nosleep</td>\n",
        "      <td>106.450000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Pegasus + Decaf</td>\n",
+       "      <td>\\textsc{PegDecaf}</td>\n",
        "      <td>16</td>\n",
        "      <td>nosleep</td>\n",
        "      <td>118.090000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Pegasus + Decaf</td>\n",
+       "      <td>\\textsc{PegDecaf}</td>\n",
        "      <td>16</td>\n",
        "      <td>nosleep</td>\n",
        "      <td>103.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Pegasus + Decaf</td>\n",
+       "      <td>\\textsc{PegDecaf}</td>\n",
        "      <td>16</td>\n",
        "      <td>nosleep</td>\n",
        "      <td>103.010000</td>\n",
@@ -103,63 +103,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>320</th>\n",
-       "      <td>PMC</td>\n",
+       "      <th>314</th>\n",
+       "      <td>\\textsc{PMC}</td>\n",
        "      <td>8</td>\n",
        "      <td>sleep</td>\n",
        "      <td>187.506007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>321</th>\n",
-       "      <td>PMC</td>\n",
+       "      <th>315</th>\n",
+       "      <td>\\textsc{PMC}</td>\n",
        "      <td>8</td>\n",
        "      <td>sleep</td>\n",
        "      <td>189.464093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>322</th>\n",
-       "      <td>PMC</td>\n",
+       "      <th>316</th>\n",
+       "      <td>\\textsc{PMC}</td>\n",
        "      <td>8</td>\n",
        "      <td>sleep</td>\n",
        "      <td>188.485512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>PMC</td>\n",
+       "      <th>317</th>\n",
+       "      <td>\\textsc{PMC}</td>\n",
        "      <td>8</td>\n",
        "      <td>sleep</td>\n",
        "      <td>185.876696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>324</th>\n",
-       "      <td>PMC</td>\n",
+       "      <th>318</th>\n",
+       "      <td>\\textsc{PMC}</td>\n",
        "      <td>8</td>\n",
        "      <td>sleep</td>\n",
        "      <td>167.899642</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>325 rows × 4 columns</p>\n",
+       "<p>319 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Scenario  Data size (GB)     Type    Makespan\n",
-       "0    Pegasus + Decaf              16  nosleep  104.140000\n",
-       "1    Pegasus + Decaf              16  nosleep  106.450000\n",
-       "2    Pegasus + Decaf              16  nosleep  118.090000\n",
-       "3    Pegasus + Decaf              16  nosleep  103.200000\n",
-       "4    Pegasus + Decaf              16  nosleep  103.010000\n",
-       "..               ...             ...      ...         ...\n",
-       "320              PMC               8    sleep  187.506007\n",
-       "321              PMC               8    sleep  189.464093\n",
-       "322              PMC               8    sleep  188.485512\n",
-       "323              PMC               8    sleep  185.876696\n",
-       "324              PMC               8    sleep  167.899642\n",
+       "              Scenario  File size (GB)     Type    Makespan\n",
+       "0    \\textsc{PegDecaf}              16  nosleep  104.140000\n",
+       "1    \\textsc{PegDecaf}              16  nosleep  106.450000\n",
+       "2    \\textsc{PegDecaf}              16  nosleep  118.090000\n",
+       "3    \\textsc{PegDecaf}              16  nosleep  103.200000\n",
+       "4    \\textsc{PegDecaf}              16  nosleep  103.010000\n",
+       "..                 ...             ...      ...         ...\n",
+       "314       \\textsc{PMC}               8    sleep  187.506007\n",
+       "315       \\textsc{PMC}               8    sleep  189.464093\n",
+       "316       \\textsc{PMC}               8    sleep  188.485512\n",
+       "317       \\textsc{PMC}               8    sleep  185.876696\n",
+       "318       \\textsc{PMC}               8    sleep  167.899642\n",
        "\n",
-       "[325 rows x 4 columns]"
+       "[319 rows x 4 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5ec9c1b378d4c40856b2eed49462d26",
+       "model_id": "5529044778a8451aa248478cac9ca539",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,25 +191,25 @@
     }
    ],
    "source": [
-    "hue_order = ['Pegasus only', 'PMC', 'Pegasus + Decaf']\n",
+    "hue_order = ['\\\\textsc{Vanilla}', '\\\\textsc{PMC}', '\\\\textsc{PegDecaf}']\n",
     "@interact(run_type=data_df['Type'].unique())\n",
     "def plot_summary(run_type):\n",
     "    sub_df = data_df[data_df['Type'] == run_type]\n",
-    "    ax = sns.barplot(x='Data size (GB)', y='Makespan', hue='Scenario', data=sub_df, hue_order=hue_order)\n",
+    "    ax = sns.barplot(x='File size (GB)', y='Makespan', hue='Scenario', data=sub_df, hue_order=hue_order)\n",
     "    ax.legend_.set_title(\"\")\n",
-    "    # plt.savefig('iosynthetic_'+run_type+'.pdf', bbox_inches='tight', dpi=12000)\n",
+    "    plt.savefig('iosynthetic_'+run_type+'_makespan.pdf', bbox_inches='tight', dpi=12000)\n",
     "    # plt.savefig('iosynthetic_'+run_type+'.png', bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8359575419604c2bb66d23306cfc48a2",
+       "model_id": "e1f6bbc98f85465f87b61f84b50b1519",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,24 +225,27 @@
     "@interact(run_type=data_df['Type'].unique())\n",
     "def plot_summary(run_type):\n",
     "    sub_df = data_df[data_df['Type'] == run_type]\n",
-    "    sub_df['Average'] = sub_df.groupby(['Scenario','Data size (GB)'])['Makespan'].transform('mean')\n",
-    "    temp_df = sub_df[['Scenario','Data size (GB)','Average']].drop_duplicates() \n",
-    "    t_df = temp_df.loc[temp_df['Scenario'] == 'Pegasus only']\n",
-    "    s = t_df.set_index('Data size (GB)')['Average']\n",
-    "    temp_df['Percentage of Pegasus only (\\%)'] = temp_df['Average']*100 / temp_df['Data size (GB)'].map(s)\n",
-    "    ax = sns.barplot(x='Data size (GB)', y='Percentage of Pegasus only (\\%)', hue='Scenario', data=temp_df, hue_order=hue_order)\n",
-    "    ax.legend_.set_title(\"\")"
+    "    sub_df['Average'] = sub_df.groupby(['Scenario','File size (GB)'])['Makespan'].transform('mean')\n",
+    "    temp_df = sub_df[['Scenario','File size (GB)','Average']].drop_duplicates() \n",
+    "    t_df = temp_df.loc[temp_df['Scenario'] == '\\\\textsc{Vanilla}']\n",
+    "    s = t_df.set_index('File size (GB)')['Average']\n",
+    "    temp_df['Percentage of Pegasus only (\\%)'] = temp_df['Average']*100 / temp_df['File size (GB)'].map(s)\n",
+    "    # print(temp_df)\n",
+    "    ax = sns.barplot(x='File size (GB)', y='Percentage of Pegasus only (\\%)', hue='Scenario', data=temp_df, hue_order=hue_order)\n",
+    "    ax.legend_.set_title(\"\")\n",
+    "    ax.set_ylabel('Normalization to \\\\textsc{Vanilla} (\\%)')\n",
+    "    plt.savefig('iosynthetic_'+run_type+'_normalization.pdf', bbox_inches='tight', dpi=12000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3191272f09594f67a1592f772d2bac41",
+       "model_id": "fa91d8cd2d5144798a9f149f54b976b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,22 +262,22 @@
     "def plot_summary(run_type):\n",
     "    sub_df = data_df[data_df['Type'] == run_type]\n",
     "    fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(10,3.5), constrained_layout=True)\n",
-    "    sub_df['Average'] = sub_df.groupby(['Scenario','Data size (GB)'])['Makespan'].transform('mean')\n",
-    "    temp_df = sub_df[['Scenario','Data size (GB)','Average']].drop_duplicates() \n",
-    "    t_df = temp_df.loc[temp_df['Scenario'] == 'Pegasus only']\n",
-    "    s = t_df.set_index('Data size (GB)')['Average']\n",
-    "    temp_df['Percentage of Pegasus only (\\%)'] = temp_df['Average']*100 / temp_df['Data size (GB)'].map(s)\n",
-    "    ax0 = sns.barplot(x='Data size (GB)', y='Makespan', hue='Scenario', data=sub_df, hue_order=hue_order, ax=axes[0])\n",
+    "    sub_df['Average'] = sub_df.groupby(['Scenario','File size (GB)'])['Makespan'].transform('mean')\n",
+    "    temp_df = sub_df[['Scenario','File size (GB)','Average']].drop_duplicates() \n",
+    "    t_df = temp_df.loc[temp_df['Scenario'] == '\\\\textsc{Vanilla}']\n",
+    "    s = t_df.set_index('File size (GB)')['Average']\n",
+    "    temp_df['Percentage of Pegasus only (\\%)'] = temp_df['Average']*100 / temp_df['File size (GB)'].map(s)\n",
+    "    ax0 = sns.barplot(x='File size (GB)', y='Makespan', hue='Scenario', data=sub_df, hue_order=hue_order, ax=axes[0])\n",
     "    # ax0.legend_.set_title(\"\")\n",
     "    ax0.legend().set_visible(False)\n",
     "    ax0.set_xlabel('File size (GB)')\n",
     "    ax0.set_ylabel('Makespan (s)')\n",
-    "    ax1 = sns.barplot(x='Data size (GB)', y='Percentage of Pegasus only (\\%)', hue='Scenario', data=temp_df, hue_order=hue_order, ax=axes[1])\n",
+    "    ax1 = sns.barplot(x='File size (GB)', y='Percentage of Pegasus only (\\%)', hue='Scenario', data=temp_df, hue_order=hue_order, ax=axes[1])\n",
     "    ax1.axhline(100, linestyle='--', linewidth=1.5)\n",
     "    # ax1.legend_.set_title(\"\")\n",
     "    ax1.legend().set_visible(False)\n",
     "    ax1.set_xlabel('File size (GB)')\n",
-    "    ax1.set_ylabel('Normalization to Pegasus only (\\%)')\n",
+    "    ax1.set_ylabel('Normalization to \\\\textsc{Vanilla} (\\%)')\n",
     "    handles, labels = axes[1].get_legend_handles_labels()\n",
     "    fig.legend(handles, labels, bbox_to_anchor=(0.8, 1.2), borderaxespad=0, ncol=3)\n",
     "    plt.savefig('iosynthetic_'+run_type+'.pdf', bbox_inches='tight', dpi=12000)"
